@@ -1,12 +1,86 @@
+import mimetypes
+from os.path import (
+    getmtime,
+    getsize,
+    )
+
 import venusian
 
 from webob import Response as _Response
 from zope.interface import implementer
 from pyramid.interfaces import IResponse
 
+_BLOCK_SIZE = 4096 * 64 # 256K
+
 @implementer(IResponse)
 class Response(_Response):
     pass
+
+class FileResponse(Response):
+    """
+    A Response object that can be used to serve a static file from disk
+    simply.
+
+    ``path`` is a file path on disk.
+
+    ``request`` must be a Pyramid :term:`request` object if passed.  Note
+    that a request *must* be passed if the response is meant to attempt to
+    use the ``wsgi.file_wrapper`` feature of the web server that you're using
+    to serve your Pyramid application.
+
+    ``cache_max_age`` if passed, is the number of seconds that should be used
+    to HTTP cache this response.
+    """
+    def __init__(self, path, request=None, cache_max_age=None):
+        super(FileResponse, self).__init__(conditional_response=True)
+        self.last_modified = getmtime(path)
+        content_type, content_encoding = mimetypes.guess_type(path,
+                                                              strict=False)
+        if content_type is None:
+            content_type = 'application/octet-stream'
+        self.content_type = content_type
+        self.content_encoding = content_encoding
+        content_length = getsize(path)
+        f = open(path, 'rb')
+        app_iter = None
+        if request is not None:
+            environ = request.environ
+            if 'wsgi.file_wrapper' in environ:
+                app_iter = environ['wsgi.file_wrapper'](f, _BLOCK_SIZE)
+        if app_iter is None:
+            app_iter = FileIter(f, _BLOCK_SIZE)
+        self.app_iter = app_iter
+        # assignment of content_length must come after assignment of app_iter
+        self.content_length = content_length
+        if cache_max_age is not None:
+            self.cache_expires = cache_max_age
+
+class FileIter(object):
+    """ A fixed-block-size iterator for use as a WSGI app_iter.
+
+    ``file`` is a Python file pointer (or at least an object with a ``read``
+    method that takes a size hint).
+
+    ``block_size`` is an optional block size for iteration.
+    """
+    def __init__(self, file, block_size=_BLOCK_SIZE):
+        self.file = file
+        self.block_size = block_size
+
+    def __iter__(self):
+        return self
+
+    def next(self):
+        val = self.file.read(self.block_size)
+        if not val:
+            raise StopIteration
+        return val
+
+    __next__ = next # py3
+
+    def close(self):
+        self.file.close()
+
 
 class response_adapter(object):
     """ Decorator activated via a :term:`scan` which treats the function
