@@ -1,3 +1,4 @@
+import io
 import unittest
 from pyramid import testing
 
@@ -15,6 +16,32 @@ class TestResponse(unittest.TestCase):
         from pyramid.interfaces import IResponse
         inst = self._getTargetClass()()
         self.assertTrue(IResponse.providedBy(inst))
+
+class TestFileIter(unittest.TestCase):
+    def _makeOne(self, file, block_size):
+        from pyramid.response import FileIter
+        return FileIter(file, block_size)
+
+    def test___iter__(self):
+        f = io.BytesIO(b'abc')
+        inst = self._makeOne(f, 1)
+        self.assertEqual(inst.__iter__(), inst)
+
+    def test_iteration(self):
+        data = b'abcdef'
+        f = io.BytesIO(b'abcdef')
+        inst = self._makeOne(f, 1)
+        r = b''
+        for x in inst:
+            self.assertEqual(len(x), 1)
+            r+=x
+        self.assertEqual(r, data)
+
+    def test_close(self):
+        f = io.BytesIO(b'abc')
+        inst = self._makeOne(f, 1)
+        inst.close()
+        self.assertTrue(f.closed)
 
 class Dummy(object):
     pass
