@@ -1,6 +1,5 @@
 import datetime
 import unittest
-import io
 
 # 5 years from now (more or less)
 fiveyrsfuture = datetime.datetime.utcnow() + datetime.timedelta(5*365)
@@ -114,7 +113,7 @@ class Test_static_view_use_subpath_False(unittest.TestCase):
         self.assertTrue(b'<html>static</html>' in response.body)
 
     def test_resource_is_file_with_wsgi_file_wrapper(self):
-        from pyramid.static import _BLOCK_SIZE
+        from pyramid.response import _BLOCK_SIZE
         inst = self._makeOne('pyramid.tests:fixtures/static')
         request = self._makeRequest({'PATH_INFO':'/index.html'})
         class _Wrapper(object):
@@ -385,32 +384,6 @@ class Test_patch_mimetypes(unittest.TestCase):
         module = DummyMimetypes()
         result = self._callFUT(module)
         self.assertEqual(result, False)
-
-class Test_FileIter(unittest.TestCase):
-    def _makeOne(self, file, block_size):
-        from pyramid.static import _FileIter
-        return _FileIter(file, block_size)
-
-    def test___iter__(self):
-        f = io.BytesIO(b'abc')
-        inst = self._makeOne(f, 1)
-        self.assertEqual(inst.__iter__(), inst)
-
-    def test_iteration(self):
-        data = b'abcdef'
-        f = io.BytesIO(b'abcdef')
-        inst = self._makeOne(f, 1)
-        r = b''
-        for x in inst:
-            self.assertEqual(len(x), 1)
-            r+=x
-        self.assertEqual(r, data)
-
-    def test_close(self):
-        f = io.BytesIO(b'abc')
-        inst = self._makeOne(f, 1)
-        inst.close()
-        self.assertTrue(f.closed)
 
 class DummyContext:
     pass
