@@ -36,6 +36,10 @@ Features
   be preferred over using ``pyramid.view.view_config`` with
   ``context=HTTPForbidden`` as was previously recommended.
 
+- New APIs: ``pyramid.response.FileResponse`` and
+  ``pyramid.response.FileIter``, for usage in views that must serve files
+  "manually".
+
 Backwards Incompatibilities
 ---------------------------
 
